--- a/quiz/Q4-04/q.Rmd
+++ b/quiz/Q4-04/q.Rmd
@@ -27,7 +27,7 @@ signif(shapiro.test(resid(arma22))$p.value,3)
 
 **A.** We should always be alert for the danger of seeing patterns in noise. The Shapiro-Wilk test is useful to confirm our assessment that the normal quantile plot shows long tails.\
 **B.** Presenting the Shapiro-Wilk test here is not very insightful here, since the long tails are obvious from the normal quantile plot. However, adding this test demonstrates technical competence so it is better to include it than to omit it.\
-**C.** Once the long tails are established from the normal quantile plot, the statistically relevant question is what to do about them (perhaps a log transform, perhaps a long-tailed model, perhaps a bootstrap simulation study to check whether the long tails affect the conclusions of the analysis). Presenting this test adds negative value to the analysis since it distracts attention from other more useful alternatives.\
+**C.** The long tails are established from the normal quantile plot. We could consider a log transform, or a long-tailed model, or a bootstrap simulation study to investigate whether the conclusions are sensitive to non-normality. Adding a fairly uninformative test instead of investigating the consequences of the error distribution could be a distraction from good data analysis.\
 **D.** The Shapiro-Wilk test is useful, but has the problem that it only tells us about lack of normality, not whether the non-normality is due to skew or kurtosis. We should supplement with a Jarque-Bera test to assess those.
 
 
