--- a/quiz/Q8-04/q.Rmd
+++ b/quiz/Q8-04/q.Rmd
@@ -1,5 +1,6 @@
 
 Let $V_n$ be a Markov process and let $W_n=h(V_n)$ for some function $h$.
+Let  $(X_n,Y_n)$ be a POMP with latent process $X_n$ and observed process $Y_n$.
 Which of the following statements are true?
 
 i. $W_n$ is a Markov process for all choices of $h$.
@@ -8,9 +9,9 @@ i. $W_n$ is a Markov process for some choices of $h$.
 
 i. $W_n$ is not a Markov process for any choice of $h$.
 
-i. If $V_n=(X_n,Y_n)$ where $X_n$ and $Y_n$ are a POMP, and $h(X_n,Y_n)=X_n$ then $W_n$ is a Markov process.
+i. If $V_n=(X_n,Y_n)$ and $h(X_n,Y_n)=X_n$ then $W_n$ is a Markov process.
 
-i. If $V_n=(X_n,Y_n)$ where $X_n$ and $Y_n$ are a POMP, and $h(X_n,Y_n)=Y_n$ then $W_n$ is a Markov process.
+i. If $V_n=(X_n,Y_n)$ and $h(X_n,Y_n)=Y_n$ then $W_n$ is a Markov process.
 
 A: i,iv,v\
 B: ii,iv\
