--- a/631.md
+++ b/631.md
@@ -81,7 +81,8 @@ A paper dealing with various practical issues in data analysis via mechanistic m
 <br>
 Many papers were written fitting mechanistic models to learn about COVID-19 transmission and to forecast its trajectory. This paper shows how it is critical to understand both the reporting process and the disease dynamics.
 
-1. Week starting Apr 14: [__madden24__](https://doi.org/10.1371/journal.pcbi.1012616).
+1. Week starting Apr 14: [__madden24__](https://doi.org/10.1371/journal.pcbi.1012616)
+<br>
 Integrating deep learning with mechanistic modeling for time series data, in the context of measles epidemiology.
 
 ## References for the STATS 631 reading group
@@ -106,11 +107,6 @@ Hyndman, R. J. & Khandakar, Y. (2008) Automatic time series forecasting: The for
 
 [__kristensen16__](https://doi.org/10.18637/jss.v070.i05).
  Kristensen, K., Nielsen, A., Berg, C. W., Skaug, H., & Bell, B. M. (2016). TMB: Automatic Differentiation and Laplace Approximation. _Journal of Statistical Software_, 70(5), 1–21. 
-
-<!--
-[__lau21__](https://doi.org/10.1371/journal.pcbi.1010251).
-Lau, M. S., Becker, A., Madden, W., Waller, L. A., Metcalf, C. J. E., & Grenfell, B. T. (2022). Comparing and linking machine learning and semi-mechanistic models for the predictability of endemic measles dynamics. _PLOS Computational Biology_, 18(9), e1010251. 
--->
 
 [__lim21__](https://doi.org/10.1098/rsta.2020.0209).
 Lim, B., & Zohren, S. (2021). Time-series forecasting with deep learning: a survey. _Philosophical Transactions of the Royal Society A_, 379(2194), 20200209. 
