--- a/quiz/Q9-01/sol.Rmd
+++ b/quiz/Q9-01/sol.Rmd
@@ -3,7 +3,10 @@
 
 **Solution**. C.\
 Using the linear dependence, also called proportionality, of the computing effort on various algorithmic parameters, we calculate
-$$5\times (10000/1000)\times (20/10)\times (1/4)=75.$$
+```{r particle-filter-effort}
+15 * (10000/1000) * (20/10) * (1/4)
+```
+
 
 \color{black}
 
