--- a/bib531.bib
+++ b/bib531.bib
@@ -142,11 +142,11 @@ pages = {1362--1385}
   author={National Aeronautics and Space Administration}
 }
 
-@misc{notes531,
+@misc{notes531w25,
  title={Notes for {STATS}/{DATASCI} 531, {M}odeling and {A}nalysis of {T}ime {S}eries {D}ata},
  author={Ionides, Edward},
- year={2022},
- url={https://ionides.github.io/531w22/}
+ year={2025},
+ url={https://ionides.github.io/531w25/}
 }
 
 @book{newton1687,
@@ -185,7 +185,7 @@ pages = {1362--1385}
  title={Simulation-Based Inference for Epidemiological Dynamics},
  journal={Summer Institute in Statistics and Modeling in Infectious Diseases},
  author={King, Aaron A and Ionides, Edward L and Lin, Qianying},
- year={2021},
+ year={2023},
  url={https://kingaa.github.io/sbied/}
 }
 
