--- a/quiz/Q9-03/q.Rmd
+++ b/quiz/Q9-03/q.Rmd
@@ -4,7 +4,7 @@ If you plot an object of class `pfilterd_pomp` (created by applying `pfilter` to
 Suppose one or more time points have low ESS (say, less than 10) even when using a fairly large number of particles (say, $10^4$).
 What is the proper interpretation?
 
-**A**. There is a problem with data, perhaps an error recording an observation.\[
+**A**. There is a problem with data, perhaps an error recording an observation.\
 **B**. There is a problem with the model which means that it cannot explain something in the data.\
 **C**. The model and data have no major problems, but the model happens to be problematic for the particle filter algorithm.\
 **D**. At least one of A, B, and C.\
