--- a/quiz/Q8-01/q.Rmd
+++ b/quiz/Q8-01/q.Rmd
@@ -4,7 +4,9 @@ Consider a model $Y_{1:N}$ for data $y_{1:N}^*$, with a latent variable $X_{0:N}
 \nonumber
 L(\theta) = f_{Y_{1:N}}(y_{1:N}^*;\theta).
 \end{equation}
-Are the following identities (A) true for all statistical models; (B) true for general POMP models but not all models; (C) true for linear Gaussian POMP models but not general POMP models; (D) generally false. 
+Are the following identities (A) true for all statistical models; (B) true for general POMP models but not all models; (C) true for linear Gaussian POMP models but not general POMP models; (D) generally false?
+Give a letter answer for each identity.
+
 
 \begin{equation}
 L(\theta)= \int f_{Y_{1:N}|X_{0:N}}(y_{1:N}^*|x_{0:N};\theta)\, f_{X_{0:N}}(x_{0:N};\theta)\, dx_{0:N} 
