--- a/01/py.qmd
+++ b/01/py.qmd
@@ -52,9 +52,7 @@ Example questions: Can we develop a better model for understanding variability o
 
 There is a temptation to attribute a warm winter to global warming. You can then struggle to explain a subsequent cold winter. Is a trend in fact noticeable at individual locations in the presence of variability? Let's look at some data, downloaded from [www.usclimatedata.com](https://www.usclimatedata.com/climate/ann-arbor/michigan/united-states/usmi0028) and put in `ann_arbor_weather.csv`.
 
-- You can get this file from the [course repository on GitHub](https://github.com/ionides/531w25).
-
-- Better, you can make a local clone of this git repository that will give you an up-to-date copy of all the data, notes, code, homeworks and solutions for this course.
+- This file is in the [course git repository on GitHub](https://github.com/ionides/531w25). Make a local clone of this repo to get an up-to-date copy of all data, notes, code, homeworks and solutions for this course.
 
 ```{python}
 #| echo: true
@@ -64,10 +62,11 @@ import matplotlib.pyplot as plt
 from statsmodels.tsa.arima.model import ARIMA
 from statsmodels.graphics.tsaplots import plot_acf
 
-y = pd.read_csv("ann_arbor_weather.csv", sep='\t', comment='#')
+y = pd.read_csv("ann_arbor_weather.csv",
+    sep='\t', comment='#')
 ```
 
-# Python, Jupyter, and Quarto
+# Reproducible documents with Quarto
 
 The notes combine source code with text, to generate statistical analysis that is:
 
@@ -83,12 +82,12 @@ These two properties are useful for developing your own statistical research pro
 
 To get a first look at our dataset, we can examine its structure:
 
+\scriptsize
 ```{python}
 #| echo: true
-print(y.info())
-print("\nFirst few rows:")
-print(y.head())
+print(y.head(4))
 ```
+\normalsize
 
 We focus on `Low`, which is the lowest temperature, in Fahrenheit, for January.
 
@@ -99,7 +98,7 @@ As statisticians, we want an uncertainty estimate. We want to know how reliable 
 - The data are $y_1,\dots,y_N$, which we also write as $y_{1:N}$.
 
 - Basic estimates of the mean and standard deviation are
-$$\hat\mu_1= \frac{1}{N}\sum_{n=1}^N y_n, \hspace{2cm}
+$$\hat\mu_1= \frac{1}{N}\sum_{n=1}^N y_n, \hspace{1.5cm}
 \hat\sigma_1= \sqrt{\frac{1}{N-1}\sum_{n=1}^N(y_n-\hat{\mu_1})^2}.$$
 
 - This suggests an approximate confidence interval for $\mu$ of $\hat\mu_1 \pm 1.96\, \hat\sigma_1/\sqrt{N}$.
@@ -135,16 +134,16 @@ plt.tight_layout()
 plt.show()
 ```
 
-# A first look at an autoregressive-moving average (ARMA) model
+# The auto-regressive moving average (ARMA) model
 
-Another basic thing to do is to fit an **autoregressive-moving average** (ARMA) model. We'll look at ARMA models in much more detail later in the course. Let's fit an ARMA model given by
+Another basic thing to do is to fit an **auto-regressive moving average** (ARMA) model. We'll look at ARMA models in much more detail later in the course. Let's fit an ARMA model given by
 $$Y_n = \mu + \alpha(Y_{n-1}-\mu) + \epsilon_n + \beta \epsilon_{n-1}.$$
 
 This has a one-lag autoregressive term, $\alpha(Y_{n-1}-\mu)$, and a one-lag moving average term, $\beta \epsilon_{n-1}$. It is therefore called an ARMA(1,1) model. These lags give the model some time dependence.
 
-- If $\alpha=\beta=0$, we get back to the basic independent model, $Y_n = \mu + \epsilon_n$.
-- If $\alpha=0$ we have a moving average model with one lag, MA(1).
-- If $\beta=0$, we have an autoregressive model with one lag, AR(1).
+- $\alpha=\beta=0$ is the basic independent model, $Y_n = \mu + \epsilon_n$.
+- $\alpha=0$ is a moving average model with one lag, MA(1).
+- $\beta=0$ is an autoregressive model with one lag, AR(1).
 
 We model $\epsilon_1\dots,\epsilon_N$ to be an independent, identically distributed (i.i.d.) sequence. To be concrete, let's specify a model where they are normally distributed with mean zero and variance $\sigma^2$.
 
@@ -158,19 +157,21 @@ We model $\epsilon_1\dots,\epsilon_N$ to be an independent, identically distribu
 
 - Other Greek letters will usually be parameters, i.e., real numbers that form part of the model.
 
-# Fitting an ARMA model in Python
+# ARMA(1,1) maximum likelihood estimation in Python
 
-We can readily fit the ARMA(1,1) model by maximum likelihood:
-
+\tiny
 ```{python}
 #| echo: true
 arma11 = ARIMA(y['Low'], order=(1, 0, 1)).fit()
 print(arma11.summary())
 ```
+\normalsize
 
 # Extracting key parameters
 
-Some exploration is required to extract the quantities of primary interest from the fitted ARMA model in Python.
+* The full model summary printout is too much information. You or your reader might not understand everything. Some parts might be best ignored. 
+
+* We can extract the quantities of primary interest from the fitted ARMA model in Python.
 
 ```{python}
 #| echo: true
@@ -179,7 +180,7 @@ se2 = arma11.bse['const']
 print(f"mu2 = {mu2:.2f}, se2 = {se2:.2f}")
 ```
 
-We will write the ARMA(1,1) estimate of $\mu$ as $\hat\mu_2$, and its standard error as $SE_2$.
+* We will write the ARMA(1,1) estimate of $\mu$ as $\hat\mu_2$, and its standard error as $SE_2$.
 
 # Comparing the i.i.d. estimate with the ARMA estimate
 
@@ -195,9 +196,9 @@ mu2_subset = arma11_subset.params['const']
 se2_subset = arma11_subset.bse['const']
 ```
 
-- In this case, the two estimates, $\hat\mu_1=$ `{python} f"{mu1:.2f}"` and $\hat\mu_2=$ `{python} f"{mu2:.2f}"`, and their standard errors, $SE_1=$ `{python} f"{se1:.2f}"` and $SE_2=$ `{python} f"{se2:.2f}"`, are close.
+- The two estimates, $\hat\mu_1=$ `{python} f"{mu1:.2f}"` and $\hat\mu_2=$ `{python} f"{mu2:.2f}"`, and their standard errors, $\mathrm{SE}_1=$ `{python} f"{se1:.2f}"` and $\mathrm{SE}_2=$ `{python} f"{se2:.2f}"`, are close.
 
-- For data up to `{python} int(yr_max)`, $\hat\mu_1^{`{python} int(yr_max)`}=$ `{python} f"{mu1_subset:.2f}"` and $\hat\mu_2^{`{python} int(yr_max)`}=$ `{python} f"{mu2_subset:.2f}"`, with standard errors, $SE_1^{`{python} int(yr_max)`}=$ `{python} f"{se1_subset:.2f}"` and $SE_2^{`{python} int(yr_max)`}=$ `{python} f"{se2_subset:.2f}"`.
+- For data up to `{python} int(yr_max)`, $\hat\mu_1^{`{python} int(yr_max)`}=$ `{python} f"{mu1_subset:.2f}"` and $\hat\mu_2^{`{python} int(yr_max)`}=$ `{python} f"{mu2_subset:.2f}"`, with standard errors, $\mathrm{SE}_1^{`{python} int(yr_max)`}=$ `{python} f"{se1_subset:.2f}"` and $\mathrm{SE}_2^{`{python} int(yr_max)`}=$ `{python} f"{se2_subset:.2f}"`.
 
 - In this case, the standard error for the simpler model is `{python} f"{(1-se1_subset/se2_subset)*100:.1f}"`% smaller.
 
@@ -232,7 +233,14 @@ plt.tight_layout()
 plt.show()
 ```
 
-We see slow variation in the residuals, over a decadal time scale. However, the residuals $r_{1:N}$ are close to uncorrelated. We see this by plotting their pairwise sample correlations at a range of lags. This is the **sample autocorrelation function**, or **sample ACF**, written for each lag $h$ as
+What patterns do you see?
+
+
+----
+
+* The residual plot may suggest slow variation in the residuals, over a decadal time scale.
+
+* Is there short-term dependence? We study this by plotting the pairwise sample correlations at a range of lags. This is the **sample autocorrelation function**, or **sample ACF**, written for each lag $h$ as
 $$\hat\rho_h = \frac{\frac{1}{N}\sum_{n=1}^{N-h} r_n \, r_{n+h}}{\frac{1}{N}\sum_{n=1}^{N} {r_n}^2}.$$
 
 # ACF plot
@@ -248,7 +256,6 @@ plt.show()
 ```
 
 - This shows no substantial autocorrelation. An ARMA model may not be a good way to describe the slow variation present in the residuals of the ARMA(1,1) model.
-- This is a simple example. However, inadequate models giving poor statistical uncertainty estimates is a general concern when working with time series data.
 
 # Quantifying uncertainty for scientific reproducibility
 
@@ -264,7 +271,7 @@ Scientists and engineers often have equations in mind to describe a system they'
 
 This is called a **state-space model**. The **state** models the quantities that we think determine how the system changes with time. However, these idealized state variables are not usually directly and perfectly measurable.
 
-Statistical analysis of time series data on a system should be able to:
+Statistical analysis of time series data on a system aims to:
 
 1. Help scientists choose between rival hypotheses.
 
@@ -284,23 +291,22 @@ We will look at examples from a wide range of scientific applications. The dynam
 
 # A volatility model
 
-Financial mathematicians have postulated the following model. We do not need to understand it in detail right now. The point is that investigators find it useful to develop models for how dynamic systems progress through time, and this gives rise to the time series analysis goals of estimating unknown parameters and assessing how successfully the fitted model describes the data.
-
+Financial mathematicians have postulated the following model. We do not need to understand it in detail right now. The point is that we may want to fit and evaluate time series models of interest to scientists.
 $$\begin{aligned} Y_n &= \exp\left\{\frac{H_n}{2}\right\} \epsilon_n,  \quad G_n = G_{n-1}+\nu_n,
 \\
 H_n &= \mu_h(1-\phi) + \phi H_{n-1} \\
 &\quad +  Y_{n-1}\sigma_\eta\sqrt{1-\phi^2}\tanh(G_{n-1}+\nu_n)\exp\left\{ \frac{-H_{n-1}}{2} \right\} + \omega_n.\\
 \end{aligned}$$
 
-- $\{\epsilon_n\}$ is i.i.d. $N(0,1)$, $\{\nu_n\}$ is i.i.d. $N(0,\sigma_{\nu}^2)$, $\{\omega_n\}$ is i.i.d. $N(0,\sigma_\omega^2)$.
+- $\{\epsilon_n\}$ is iid $N(0,1)$, $\{\nu_n\}$ is iid $N(0,\sigma_{\nu}^2)$, $\{\omega_n\}$ is iid $N(0,\sigma_\omega^2)$.
 
-- $H_n$ is unobserved volatility at time $t_n$. We only observe the return, modeled by $Y_n$.
+- $H_n$ is unobserved volatility at time $t_n$, with auto-regressive behavior, having dependence on $Y_{n-1}$ and a slowly varying process $G_n$. We only observe the return, modeled by $Y_n$.
 
-- $H_n$ has auto-regressive behavior and dependence on $Y_{n-1}$ and a slowly varying process $G_n$.
+- $H_n$ has 
 
 # Questions to be addressed later in the course
 
-This is an example of a **mechanistic model**, where scientific or engineering considerations lead to a model of interest. Now there is data and a model of interest, it is time to recruit a statistician!
+This is an example of a **mechanistic model**, where scientific or engineering considerations lead to a proposed model. Now there is data and a model, it is time to recruit a statistician!
 
 1. How can we get good estimates of the parameters, $\mu_h$, $\phi$, $\sigma_\nu$, $\sigma_\omega$, together with their uncertainties?
 
@@ -310,6 +316,6 @@ This is an example of a **mechanistic model**, where scientific or engineering c
 
 Likelihood-based inference for this partially observed stochastic dynamic system is possible, and enables addressing these questions \parencite{breto14}.
 
-- By the end of this course, you will be able to carry out data analysis developing complex models and fitting them to time series. See past final projects for [2018](https://ionides.github.io/531w18/final_project/), [2020](https://ionides.github.io/531w20/final_project/), [2021](https://ionides.github.io/531w21/final_project/), [2022](https://ionides.github.io/531w22/final_project/), [2024](https://ionides.github.io/531w24/final_project/).
+By the end of this course, you will be able to carry out data analysis developing complex models and fitting them to time series. See past final projects for [2018](https://ionides.github.io/531w18/final_project/), [2020](https://ionides.github.io/531w20/final_project/), [2021](https://ionides.github.io/531w21/final_project/), [2022](https://ionides.github.io/531w22/final_project/), [2024](https://ionides.github.io/531w24/final_project/).
 
 # References
