--- a/02/py.qmd
+++ b/02/py.qmd
@@ -12,6 +12,9 @@ bibliography: ../bib531.bib
 
 ---
 
+
+## General notation for time series data and models
+
 ```{python}
 #| echo: false
 import pandas as pd
@@ -23,11 +26,7 @@ from statsmodels.graphics.tsaplots import plot_acf
 
 \newcommand\given{\,;\,}
 
-## General notation for time series data and models
-
-**Definition:** Time series data and time series models
-
-- A **time series** is a sequence of numbers, called **data**. In general, we will suppose that there are $N$ numbers, $y^*_1, y^*_2, \dots, y^*_N$, collected at an increasing sequence of times, $t_1, t_2, \dots, t_N$.
+**Definition:** A **time series** is a sequence of numbers, called **data**. In general, we will suppose that there are $N$ numbers, $y^*_1, y^*_2, \dots, y^*_N$, collected at an increasing sequence of times, $t_1, t_2, \dots, t_N$.
 
 - We write $1{:}N$ for the sequence $\{1,2,\dots,N\}$ and we write the collection of numbers $\{y^*_n, n=1,\dots,N\}$ as $y^*_{1:N}$.
 
@@ -44,7 +43,13 @@ f_{Y_{1:N}}(y_1,\dots,y_N \given \theta).
 
 - Here, $\theta$ is a vector of parameters.
 
-- The density is defined for arbitrary outcomes $y_{1:N}$. Its value at the data, $y^*_{1:N}$, is called the **likelihood**.
+- The density is defined for arbitrary outcomes $y_{1:N}$. Its value at the data, $y^*_{1:N}$, is called the **likelihood**,
+
+\begin{equation}
+L(\theta) = f_{Y_{1:N}}(y^*_1,\dots,y^*_N \given \theta).
+\end{equation}
+
+
 
 ## Notation for densities
 
@@ -54,7 +59,7 @@ f_{Y_{1:N}}(y_1,\dots,y_N \given \theta).
 
 ----
 
-- Scientifically, we consider the hypothesis that $y^*_{1:N}$ is well described as a realization of $Y_{1:N}$ for some unknown value of $\theta$.
+- Scientifically, we consider the hypothesis that $y^*_{1:N}$ is well described as a realization of $Y_{1:N}$ for an unknown value of $\theta$.
 
 - Our notation distinguishes between the model, $Y_{1:N}$; an arbitrary realization of the model, $y_{1:N}$; the specific sequence of numbers that we observed as data, $y^*_{1:N}$.
 
@@ -76,18 +81,18 @@ There are different answers to these questions, but you should be able to write 
 
 ## Review: Expectation
 
-Random variables usually have an expected value, and in this course they always do. We write $\mathrm{E}[X]$ for the expected value of a random variable $X$.
+Random variables usually have an **expected value**, and in this course they always do. We write $\mathrm{E}[X]$ for the expected value of a random variable $X$.
 
 **Question.** Review question: What is expected value? How is it defined? How can it fail to exist for a properly defined random variable?
 
 \
 
-## Trend
+## Trend, also called the mean function
 
 **Definition:** The **mean function**, for $n\in 1{:}N$, is
 $$ \mu_n = \mathrm{E}[Y_n] = \int_{-\infty}^\infty y_n \, f^{}_{Y_n}(y_n)\, dy_n$$
 
-- We use the words "mean function" and "trend" interchangeably.
+- **Mean function** and **trend** are synonyms. We can say **model trend** to clarify that this is a property of the model, not data.
 
 - We say "function" since $\mu_n$ is formally a function of $n$.
 
@@ -110,7 +115,7 @@ $\mu(t_n)= \mu_n$.
 \hat\mu_n = \hat\mu_n(y^*_{1:N}).
 \end{equation}
 
-- Perhaps unfortunately, $\hat\mu_n$ denotes both the estimator function and its value evaluated at $y^*_{1:N}$. This is standard terminology for data analysis.
+- $\hat\mu_n$ denotes both the estimator function and its value evaluated at $y^*_{1:N}$. This is standard terminology for data analysis. The ambiguity can be clarified when it is helpful.
 
 ## Mean stationary models
 
@@ -121,13 +126,11 @@ In this case, we might estimate $\mu$ using the mean estimator,
 \hat\mu(y_{1:N})=\frac{1}{N}\sum_{n=1}^N y_n.
 \end{equation}
 
-- $\hat\mu=\hat\mu(y^*_{1:N})$ is the **sample mean**. 
+- $\hat\mu=\hat\mu(y^*_{1:N})$ is the **sample mean** or **data mean**.
 
-- We can compute $\hat\mu$ for any dataset. It is only a reasonable estimator of the mean function when a mean stationary model is appropriate.
+- We can compute $\hat\mu$ for any dataset. It is only a reasonable estimate of the mean function when a mean stationary model is appropriate.
 
-- Notice that trend is a property of the model, and the estimated trend is a function of the data.
-
-- Similarly, data cannot be mean stationary. A model can be mean stationary.
+- Data cannot formally be mean stationary. Mean stationarity is a property of a model.
 
 ## Properties of models vs properties of data
 
@@ -177,8 +180,9 @@ $$ \hat\rho_h = \hat\rho_h(y_{1:N})= \frac{\hat\gamma_h}{\hat\gamma_0}.$$
 
 ## Least squares estimation of a trend
 
-Let's analyze a time series of global mean annual temperature downloaded from
-[https://climate.nasa.gov/vital-signs/global-temperature/](https://climate.nasa.gov/vital-signs/global-temperature/). These data are in degrees Celsius measured as an anomaly from a 1951-1980 base. This is climatology jargon for saying that the sample mean of the temperature over the interval 1951-1980 was subtracted from all time points.
+We analyze a time series of global mean annual temperature from
+[https://climate.nasa.gov/vital-signs/global-temperature/](https://climate.nasa.gov/vital-signs/global-temperature/).\
+These data are in degrees Celsius measured as an anomaly from a 1951-1980 base. This is climatology jargon for saying that the sample mean of the temperature over the interval 1951-1980 was subtracted from all time points.
 
 ```{python}
 #| echo: true
@@ -193,7 +197,8 @@ print(global_temp.head(3))
 #| echo: true
 #| eval: false
 plt.figure(figsize=(10, 4))
-plt.plot(global_temp['Year'], global_temp['Annual'], '-')
+plt.plot(global_temp['Year'],
+    global_temp['Annual'], '-')
 plt.xlabel('Year')
 plt.ylabel('Temperature anomaly (°C)')
 plt.tight_layout()
@@ -388,7 +393,8 @@ Let's look at the residuals to assess how appropriate this model is here.
 #| fig-width: 10
 #| fig-height: 4
 fig, ax = plt.subplots(figsize=(10, 4))
-plot_acf(lm_fit.resid, ax=ax, lags=20)
+plot_acf(lm_fit.resid, ax=ax, lags=20,
+    bartlett_confint=False)
 plt.tight_layout()
 plt.show()
 ```
